[gd_scene load_steps=7 format=3 uid="uid://bvve7gyyla06c"]

[ext_resource type="Texture2D" uid="uid://cipjt5n4dfvrc" path="res://assets/Diamond/Sprite-0001.png" id="1_65h2b"]
[ext_resource type="Script" path="res://scenes/entities/player/player.gd" id="1_ukryb"]
[ext_resource type="Texture2D" uid="uid://crwb4p6m75jnm" path="res://assets/Circle/Circle-0002.png" id="2_ovhgi"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="4_nk8rd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_25dut"]
radius = 182.102

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85m0h"]
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ukryb")
attack_range_size = 1.0

[node name="AttackRadius" type="Area2D" parent="."]

[node name="AttackCollider" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource("CircleShape2D_25dut")

[node name="Indicator" type="Sprite2D" parent="AttackRadius"]
visible = false
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(11.75, 11.75)
texture = ExtResource("2_ovhgi")

[node name="Panel" type="Panel" parent="AttackRadius"]
offset_left = -180.0
offset_top = -180.0
offset_right = 180.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxFlat_85m0h")

[node name="PlayerCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(16, 0, 0, 16, -16, 0, 0, -16)

[node name="PlayerBody" type="Sprite2D" parent="."]
texture = ExtResource("1_65h2b")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Joystick" parent="UI" instance=ExtResource("4_nk8rd")]
offset_top = -1588.0
offset_bottom = -1288.0
joystick_mode = 1
use_input_actions = false

[node name="Base" parent="UI/Joystick" index="0"]
offset_left = 331.0
offset_top = 1204.0
offset_right = 531.0
offset_bottom = 1404.0

[connection signal="area_entered" from="AttackRadius" to="." method="_on_attack_radius_area_entered"]
[connection signal="body_shape_entered" from="AttackRadius" to="." method="_on_attack_radius_body_shape_entered"]
[connection signal="body_shape_exited" from="AttackRadius" to="." method="_on_attack_radius_body_shape_exited"]

[editable path="UI/Joystick"]
